# ipk-project-2-2022

./: CMakeLists.txt  Makefile  README.md  clientConfig.c  clientConfig.h  ipk-simpleftp-client.c  ipk-simpleftp-server.c  mover.sh  serverConfig.h  userpass.txt
client/: clientConfig.c  clientConfig.h  ipk-simpleftp-client.c
server/: auth.c  auth.h  ipk-simpleftp-server.c  serverConfig.c  serverConfig.h
wDir/: file.txt
